<resources>
    <string name="app_name">Recorder</string>

    <!-- Camera recorder -->
    <string name="recorder_btn_capture">照相</string>
    <string name="recorder_btn_recorder">录像</string>
    <string name="recorder_btn_exit">退出</string>
    <string name="recorder_btn_save">保存</string>
    <string name="recorder_btn_preview">预览</string>
    <string name="recorder_btn_stop">停止</string>
    <string name="recorder_btn_flash_on">开灯</string>
    <string name="recorder_btn_flash_off">关灯</string>
    <string name="recorder_toast_taking_forbidden">请在录像时拍摄此类型照片！</string>
    <string name="recorder_toast_capture_done">拍照保存成功！</string>
    <string name="recorder_toast_capture_failed">拍照保存失败！</string>
    <string name="recorder_toast_captureing">正在保存，请稍后...</string>
    <string name="recorder_toast_record_done">录像保存成功!</string>
    <string name="recorder_toast_media_start_failed">录像启动失败，请稍后重试</string>
    <string name="recorder_toast_flash_on_failed">无法开启闪光灯</string>
    <string name="recorder_toast_prepare_recorder">正在准备录像，请稍后...</string>
    <string name="recorder_toast_take_picture_failed">请在录像时拍摄</string>
    <string name="recorder_toast_preview_picture_failed">当前没有照片可以预览</string>
    <string name="recorder_toast_return_failed">正在拍摄录制当中，请拍摄完成后返回</string>
    <string name="app_recorder_permission_exception_notice">录音、相机权限异常，请确认相关权限已开启</string>
</resources>
