<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/actionLayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_flash"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:gravity="center"
            android:onClick="onFlashClick"
            android:text="@string/recorder_btn_flash_on"
            android:textColor="@color/text_black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_recorder"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:gravity="center"
            android:onClick="onRecorderClick"
            android:text="@string/recorder_btn_recorder"
            android:textColor="@color/text_black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_capture"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:gravity="center"
            android:onClick="onCaptureClick"
            android:text="@string/recorder_btn_capture"
            android:textColor="@color/text_black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_preview"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#CCFFFFFF"
            android:gravity="center"
            android:onClick="onExitClick"
            android:text="@string/recorder_btn_preview"
            android:textColor="@color/text_black"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/showLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Chronometer
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="25sp"
            android:visibility="gone" />

        <android.support.v4.view.ViewPager
            android:id="@+id/previewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="#aa1d1d1d"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/background_transparent_gray"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/recorder_toast_captureing"
                android:textColor="@color/text_black"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>

